Ajustando domini de group user e criando middleware para validar administrador do grupo
