# backend/src/domain/groupuser/http/controllers/GroupUserController.ts
@@ -2,7 +2,10 @@ import { Request, Response } from "express";
 import HttpStatus from "http-status-codes";
 import { container } from "tsyringe";
 
+import { HEADER_EMAIL } from "@constants/application";
+import * as messages from "@constants/messages";
 import GetGroupsByUserService from "@domain/groupuser/services/GetGroupsByUserService";
+import ExceptionBase from "@shared/exceptions/ExceptionBase";
 
 import GroupUserService from "../../services/GroupUserService";
 import InviteUserToGroupSerive from "../../services/InviteUserToGroupSerive";
@@ -16,16 +19,29 @@ export default class GroupUserController {
             InviteUserToGroupSerive
         );
 
-        const { user_id: inveted_user_id, group_id } = request.body;
-        const user_id = request.user.id;
+        const groupId = request.params.id;
+        const invetedUserId = request.header(HEADER_EMAIL);
 
-        const group = await inviteUserToGroupSerive.execute(
-            group_id,
-            inveted_user_id,
-            user_id
-        );
+        console.log(groupId)
+        console.log(invetedUserId)
+        
+        // if (!invetedUserId) {
+        //     throw new ExceptionBase(
+        //         messages.USER_DOES_NOT_EXISTS_TYPE,
+        //         messages.USER_DOES_NOT_EXISTS_TITLE,
+        //         HttpStatus.BAD_REQUEST,
+        //         messages.USER_DOES_NOT_EXISTS_DETAIL,
+        //         messages.USER_INSTANCE
+        //     );
+        // }
 
-        return response.status(HttpStatus.CREATED).json(group);
+        // const group = await inviteUserToGroupSerive.execute(
+        //     groupId,
+        //     invetedUserId
+        // );
+
+        // return response.status(HttpStatus.CREATED).json(group);
+        return response.status(HttpStatus.CREATED);
     }
 
     public async shuffle(
